CSS/about.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Lora', serif;
    background-color: #EDEAE7;
}

.about-container {
    max-width: 800px;
    margin: 0 auto;
    padding: 50px 20px;
    text-align: right;
    background-color: #EDEAE7;
}

h1 {
    text-align: center;
    font-size: 2.5em;
    color: #333;
    margin-bottom: 20px;
}

h2 {
    font-size: 1.8em;
    margin-top: 30px;
}

p {
    font-size: 1.2em;
    line-height: 1.6;
    color: #333;
    margin-bottom: 5px;
}

a {
    color: blue;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

ul {
    font-size: 1.2em;
    /* Increase font size for the ul and li elements */
    line-height: 1.6;
    /* Adjust line height */
}

